--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "name": "Python: Flask",
+            "type": "python",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
+            "module": "flask",
+            "args": [
+                "run"
+            ],
+            "jinja": true
         }
     ]
 }
