--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,52 @@
-flask
-gunicorn
-ipython
-flask_sqlalchemy
-sqlalchemy
-autopep8
-psycopg2
-python-dotenv
-flask-migrate
-flask-script
-alembic
-pylint
-flask_restful
-pytest
-yapf
+alembic==1.4.2
+aniso8601==8.0.0
+appnope==0.1.0
+astroid==2.4.0
+attrs==19.3.0
+autopep8==1.5.2
+backcall==0.1.0
+click==7.1.2
+decorator==4.4.2
+Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-RESTful==0.3.8
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.17.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+Mako==1.1.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.2.0
+packaging==20.3
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==0.13.1
+prompt-toolkit==3.0.5
+psycopg2==2.8.5
+ptyprocess==0.6.0
+py==1.8.1
+pycodestyle==2.5.0
+Pygments==2.6.1
+pylint==2.5.0
+pyparsing==2.4.7
+pytest==5.4.2
+python-dateutil==2.8.1
+python-dotenv==0.13.0
+python-editor==1.0.4
+pytz==2020.1
+six==1.14.0
+SQLAlchemy==1.3.16
+toml==0.10.0
+traitlets==4.3.3
+wcwidth==0.1.9
+Werkzeug==1.0.1
+wrapt==1.12.1
+yapf==0.30.0
