--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -66,7 +66,8 @@ jobs:
         mv ./dist ./web/build
         cd ..
         touch artifact.tgz
-        tar czfv artifact.tgz --exclude=artifact.tgz .
+        tar czfv artifact.tgz --exclude=artifact.tgz --exclude=.git .
+        ls
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
