fix: Added Job dependency for draft-release

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -72,6 +72,8 @@ jobs:
         name: artifact.tgz
         path: artifact.tgz
   draft-release:
+    needs:
+      - merge-results
     name: Draft Release
     runs-on: ubuntu-latest
     steps:
