--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -81,6 +81,7 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: artifact.tgz
+          path: ./
       - name: Draft Release
         id: draft_release
         uses: actions/create-release@v1
@@ -100,6 +101,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.draft_release.outputs.upload_url }}
-          asset_path: ./artifact.tgz
+          asset_path: artifact.tgz
           asset_name: ${{ github.ref }}
           asset_content_type: application/gzip
