--- a/.github/workflows/testDiscordWorkflow.yml
+++ b/.github/workflows/testDiscordWorkflow.yml
@@ -14,4 +14,4 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       with:
-        args: 'The release [{{ EVENT_PAYLOAD.release.tag_name }}]({{ EVENT_PAYLOAD.release.url }}) of project {{ EVENT_PAYLOAD.repository.full_name }} has been released.'
+        args: The release [${{ EVENT_PAYLOAD.release.tag_name }}](${{ EVENT_PAYLOAD.release.url }}) of project ${{ EVENT_PAYLOAD.repository.full_name }} has been released.
