--- a/.github/workflows/test-discord.yml
+++ b/.github/workflows/test-discord.yml
@@ -13,4 +13,5 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       with:
-        args: 'The release [{{ EVENT_PAYLOAD.release.tag_name }}]({{ EVENT_PAYLOAD.release.url }}) of project {{ EVENT_PAYLOAD.repository.full_name }} has been released.'
+        args: "{{ GITHUB_ACTION }} {{GITHUB_ACTION}} ${{ GITHUB_ACTION }} ${{GITHUB_ACTION}}"
+        #args: 'The release [{{ EVENT_PAYLOAD.release.tag_name }}]({{ EVENT_PAYLOAD.release.url }}) of project {{ EVENT_PAYLOAD.repository.full_name }} has been released.'
