--- a/.github/workflows/test-discord.yml
+++ b/.github/workflows/test-discord.yml
@@ -13,4 +13,4 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       with:
-        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.url }}) of project ${{ github.repository }} has been released.'
+        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been released.'
