--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -136,6 +136,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: artifact-${{ needs.version-bump.outputs.version }}.tgz
+        path: ./
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
