--- a/.github/workflows/test-discord.yml
+++ b/.github/workflows/test-discord.yml
@@ -14,4 +14,4 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       with:
-        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been released.'
+        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been published.'
