--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,7 +44,23 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytestcommandnotfoundtestinghithere
+    - name: Push results to discord
+      uses: Ilshidur/action-discord@0.0.2
+      if: success()
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
+      with:
+        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been published.'
+    - name: Push results to discord
+      uses: Ilshidur/action-discord@0.0.2
+      if: failure()
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
+      with:
+        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been published.'
   build-web:
     needs:
       - version-bump
