--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -52,7 +52,7 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       with:
-        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been published.'
+        args: 'The build [${{ job.run_number }}](${{ env.run_url }}) of project ${{ github.repository }} has succeeded.'
     - name: Push results to discord
       uses: Ilshidur/action-discord@0.0.2
       if: failure()
@@ -60,7 +60,7 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       with:
-        args: 'The release [${{ github.event.release.tag_name }}](${{ github.event.release.html_url }}) of project ${{ github.repository }} has been published.'
+        args: 'The build [${{ job.run_number }}](${{ env.run_url }}) of project ${{ github.repository }} has failed.'
   build-web:
     needs:
       - version-bump
