--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -50,17 +50,19 @@ jobs:
       if: success()
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        DISCORD_AVATAR: 'https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png'
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
+        DISCORD_USERNAME: Github Actions
       with:
-        args: 'The build [${{ github.job }}](${{ job.html_url }}) of project ${{ github.repository }} has succeeded.'
+        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/runs/${{ github.run_id }}) of project ${{ github.repository }} has succeeded.'
     - name: Push results to discord
       uses: Ilshidur/action-discord@0.0.2
       if: failure()
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        DISCORD_AVATAR: 'https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png'
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
+        DISCORD_USERNAME: Github Actions
       with:
-        args: 'The build [${{ github.job }}](${{ job.html_url }}) of project ${{ github.repository }} has failed.'
+        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/runs/${{ github.run_id }}) of project ${{ github.repository }} has failed.'
   build-web:
     needs:
       - version-bump
