--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -147,39 +147,6 @@ jobs:
       with:
         name: artifact-${{ needs.version-bump.outputs.version }}
         path: artifact-${{ needs.version-bump.outputs.version }}.tgz
-#  draft-release:
-#    needs:
-#      - merge-results
-#    name: Draft Release
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Download Artifact
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: artifact.tgz
-#          path: ./
-#      - name: Draft Release
-#        id: draft_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: ${{ github.ref }}
-#          release_name: Release ${{ github.ref }}
-#          body: |
-#            An example release
-#          draft: true
-#          prerelease: false
-#      - name: Upload Release Assets
-#        id: upload_assets
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.draft_release.outputs.upload_url }}
-#          asset_path: artifact.tgz
-#          asset_name: ${{ github.ref }}
-#          asset_content_type: application/gzip
   deploy-to-heroku:
     needs:
       - merge-results
@@ -208,3 +175,21 @@ jobs:
         python deploy.py build-output --app cbongdevs-staging-helloworld -n 0
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+    - name: Push results to discord (sucess)
+      if: success()
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_USERNAME: Deploy Succeeded
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
+      uses: Ilshidur/action-discord@0.1.0
+      with:
+        args: 'Deployment for [${{ needs.version-bump.outputs.version }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has succeeded.'
+    - name: Push results to discord (fail)
+      if: failure()
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_USERNAME: Deploy Failed
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsRedTick.png
+      uses: Ilshidur/action-discord@0.1.0
+      with:
+        args: 'Deployment for [${{ needs.version-bump.outputs.version }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has failed.'
