--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finance-web",
-  "version": "0.0.0",
+  "version": "0.1.0-dev.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
