ci: Update Version Bump

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -27,6 +27,7 @@ jobs:
         uses: nobrayner/version-bumper@v1
         id: version-bump
         with:
+          github-token: ${{ secrets.github_token }}
           bump: 'preminor'
           prerelease-text: 'dev'
           build-number: ${{ github.run_number }}
