ci: test with higher fetch depth

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,6 +23,8 @@ jobs:
       version: ${{ steps.version-bump.outputs.version }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Bump Version
         uses: nobrayner/version-bumper@v1
         id: version-bump
