--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+#trigger ci
       - name: Bump Version
         uses: nobrayner/version-bumper@v1
         id: version-bump
