ci: Allow same version in npm

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -37,7 +37,7 @@ jobs:
         if: ${{ steps.version-bump.outputs.new-version }}
         run: |
           echo ${{ steps.version-bump.outputs.version }} > version.info
-          cd web && npm version --git-tag-version=false ${{ steps.version-bump.outputs.version }}
+          cd web && npm version --git-tag-version=false --allow-same-version ${{ steps.version-bump.outputs.version }}
           cd ../api && echo ${{ steps.version-bump.outputs.version }} > VERSION
           cd ..
           git config user.email version-bumper@github.com
