ci: Fix Commit step

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,8 +33,9 @@ jobs:
           bump: 'preminor'
           prerelease-text: 'dev'
       - name: Commit new version
-        if: ${{ steps.version-bump.outputs.new-version }} == true
+        if: ${{ steps.version-bump.outputs.new-version }} == 'true'
         run: |
+          echo "Version Bump new-version: ${{ steps.version-bump.outputs.new-version }}"
           echo ${{ steps.version-bump.outputs.version }} > version.info
           cd web && npm version --git-tag-version=false --allow-same-version ${{ steps.version-bump.outputs.version }}
           cd ../api && echo ${{ steps.version-bump.outputs.version }} > VERSION
