--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -86,6 +86,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x 
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./web
     - name: Build Web
       run: npm run build --if-present
       working-directory: ./web
