--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -86,6 +86,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x 
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./web
     - name: Build Web
       run: npm run build --if-present
       working-directory: ./web
@@ -103,3 +106,11 @@ jobs:
       with:
         args: '${{ github.job }} succeeded for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
+      if: failure()
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_USERNAME: Build Failed
+        DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
+      uses: Ilshidur/action-discord@0.1.0
+      with:
+        args: '${{ github.job }} failed for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
