--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Deploy
 
 on:
   push:
+    # Needs expanding later
     branches: [ master, develop ]
 
 jobs:
@@ -53,7 +54,10 @@ jobs:
     - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
-        node-version: 10.x
+        node-version: 10.x 
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./web
     - name: Build Web
       run: npm run build --if-present
       working-directory: ./web
